# y0_math

./: CMakeLists.txt  README.md
include/y0_math/euler_angles/: euler_angles.h
include/y0_math/math/: math_util.h
include/y0_math/matrix/: rotation_matrix.h
include/y0_math/quaternion/: quaternion.h
include/y0_math/vector/: vector3.h
src/y0_math/math/: math_util.cc
test/: CMakeLists.txt
test/y0_math/math/: math_util_test.cc
